# NTNU-GameDesign

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  imgui.ini  install_dependencies.sh  rebuild.sh
5568ke/Core/include/: AnimationChannel.hpp  AnimationClip.hpp  AnimationTypes.hpp  Application.hpp  BoundingBox.hpp  CollisionSystem.hpp  GameObject.hpp  GlobalAnimationState.hpp  MainMenu.hpp  Mesh.hpp  Model.hpp  Node.hpp  Primitive.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  SkeletonVisualizer.hpp  Vertex.hpp  include_5568ke.hpp
5568ke/Core/src/: AnimationChannel.cpp  AnimationClip.cpp  Application.cpp  BoundingBox.cpp  GameObject.cpp  MainMenu.cpp  Mesh.cpp  Model.cpp  Node.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  SkeletonVisualizer.cpp  main.cpp
5568ke/ImGui/include/: ImGuiManager.hpp
5568ke/ImGui/src/: ImGuiManager.cpp
5568ke/Material/: Material.hpp  Texture.hpp
5568ke/Material/include/: BlinnPhongMaterial.hpp
5568ke/Material/src/: BlinnPhongMaterial.cpp
5568ke/ModelLoader/: ModelRegistry.cpp  ModelRegistry.hpp
5568ke/ModelLoader/include/: GltfLoader.hpp
5568ke/ModelLoader/src/: GltfLoader.cpp  TinyGltfDefined.cpp
5568ke/NTNU/: DialogSystem.cpp  DialogSystem.hpp
5568ke/Physics/include/: BoundingBox.hpp  Collider.hpp  CollisionSystem.hpp
5568ke/Physics/src/: BoundingBox.cpp
5568ke/Renderer/include/: BoundingBoxVisualizer.hpp  LightVisualizer.hpp  Renderer.hpp  SkeletonVisualizer.hpp  SkyboxVisualizer.hpp
5568ke/Renderer/src/: BoundingBoxVisualizer.cpp  LightVisualizer.cpp  Renderer.cpp  SkeletonVisualizer.cpp  SkyboxVisualizer.cpp
assets/models/NTNU/: human1.gltf  teacher.gltf
assets/models/fantasy_landscape_3/: license.txt  scene.gltf
assets/models/smo_calli/: license.txt  scene.gltf
assets/models/smo_ina/: license.txt  scene.gltf
assets/models/smo_kiara/: license.txt  scene.gltf
assets/models/紫咲シオン公式mmd_ver1.01/: readme.txt  紫咲シオン.mtl
assets/shaders/: blinn.frag  blinn.vert  boundingBox.frag  boundingBox.vert  line.frag  point.frag  point.vert  skeleton.vert  skinned.vert  skybox.frag  skybox.vert  skybox_model.frag  skybox_model.vert
